// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<Tooltip
  overlay="visibility.private.description.TRK"
>
  <div
    className="badge"
  >
    visibility.private
  </div>
</Tooltip>
`;

exports[`should render public 1`] = `
<Tooltip
  overlay="visibility.public.description.TRK"
>
  <div
    className="badge"
  >
    visibility.public
  </div>
</Tooltip>
`;
